logs/djay.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/appdirs-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/baron'...
Listing './lib/python3.5/site-packages/baron-0.6.6.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dj'...
Listing './lib/python3.5/site-packages/dj/blueprints'...
Listing './lib/python3.5/site-packages/dj/blueprints/command'...
Listing './lib/python3.5/site-packages/dj/blueprints/command/templates'...
Listing './lib/python3.5/site-packages/dj/blueprints/command/templates/{{app}}'...
Listing './lib/python3.5/site-packages/dj/blueprints/command/templates/{{app}}/management'...
Listing './lib/python3.5/site-packages/dj/blueprints/command/templates/{{app}}/management/commands'...
Listing './lib/python3.5/site-packages/dj/blueprints/init'...
Listing './lib/python3.5/site-packages/dj/blueprints/init/templates'...
Listing './lib/python3.5/site-packages/dj/blueprints/init/templates/tests'...
Listing './lib/python3.5/site-packages/dj/blueprints/init/templates/{{app}}'...
Listing './lib/python3.5/site-packages/dj/blueprints/init/templates/{{app}}/management'...
Listing './lib/python3.5/site-packages/dj/blueprints/init/templates/{{app}}/management/commands'...
Listing './lib/python3.5/site-packages/dj/blueprints/init/templates/{{app}}/migrations'...
Listing './lib/python3.5/site-packages/dj/blueprints/init/templates/{{app}}/models'...
Listing './lib/python3.5/site-packages/dj/blueprints/init/templates/{{app}}/utils'...
Listing './lib/python3.5/site-packages/dj/blueprints/model'...
Listing './lib/python3.5/site-packages/dj/blueprints/model/templates'...
Listing './lib/python3.5/site-packages/dj/blueprints/model/templates/tests'...
Listing './lib/python3.5/site-packages/dj/blueprints/model/templates/tests/unit'...
Listing './lib/python3.5/site-packages/dj/blueprints/model/templates/tests/unit/models'...
Listing './lib/python3.5/site-packages/dj/blueprints/model/templates/{{app}}'...
Listing './lib/python3.5/site-packages/dj/blueprints/model/templates/{{app}}/models'...
Listing './lib/python3.5/site-packages/dj/commands'...
Listing './lib/python3.5/site-packages/dj/utils'...
Listing './lib/python3.5/site-packages/djay-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/inflection-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redbaron'...
Listing './lib/python3.5/site-packages/redbaron-0.6.3.dist-info'...
Listing './lib/python3.5/site-packages/rply'...
Listing './lib/python3.5/site-packages/rply-0.7.5.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/integration'...
Compiling './lib/python3.5/site-packages/tests/integration/test_cli.py'...
***   File "./lib/python3.5/site-packages/tests/integration/test_cli.py", line 12
    print white('\n*** ') + yellow(msg)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tests/unit'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
